# makeONI

./: .gitignore  Makefile
Matlab/: compile.m  demo_project_depth_map.m  demo_synched_projected_frames.m  get_accel_data.mexa64  mex_cbf.mexa64  projectRawForONI.m  projectRawForPCD.m
Matlab/aux/: demo_fill_depth_cross_bf_test.m  depth_plane2depth_world.m
Src/: NiRecordSynthetic.cpp  colors.cpp
Src/convert/: CMakeLists.txt  ply2pcd.cpp
Src/depth_image_creation/: CMakeLists.txt  depth_image_visualization.cpp
Src/greedy_projection/: CMakeLists.txt  greedy_projection.cpp
Src/label_pcl/: CMakeLists.txt  example_supervoxels.cpp  label.cpp
Src/range_image_creation/: CMakeLists.txt  range_image_visualization.cpp
